--- a/doc/styles/base.css
+++ b/doc/styles/base.css
@@ -8,6 +8,10 @@ body {
 	font: 9pt arial;
 }
 
+img {
+    border: none;
+}
+
 #page {
 	position: relative;
 	width: 800px;
@@ -205,7 +209,10 @@ ul.dkarrow li {
 }
 
 .newsbox {
-	width: 100%;
+	width: 90%;
+    position: relative;
+    padding: 23px 0 10px 0;
+    margin: 0 0 20px 0;
 }
 
 .newsbox h2{
@@ -214,14 +221,16 @@ ul.dkarrow li {
 	font-size: 11px;
 }
 
-.newsbox .header, .newsbox h2 {
+.newsbox h2 {
 	border-left: solid 1px #B6B4B4;
 	border-top: solid 1px #B6B4B4;
 	border-right: solid 1px #B6B4B4;
 	height:20px;
 	width: 200px;
 	padding: 2px 0 0 5px;
-	position: relative;
+	position: absolute;
+    left: 0;
+    top: 0;
 	background-color: #FFF;
 	background-image: url('../images/headerentrybg.png');
 	background-repeat: repeat-x;
@@ -234,48 +243,24 @@ ul.dkarrow li {
 	border-bottom: solid 1px #B6B4B4;
 	border-top: solid 1px #B6B4B4;
 	width: 100%;
-	padding: 5px 0 5px 5px;
+	padding: 10px;
 }
 
-.newsbox > h2 + p {
-	border-top: solid 1px #B6B4B4;
-	border-left: solid 1px #B6B4B4;
-	border-right: solid 1px #B6B4B4;
-	display: block;
-	width: 90%;
-	margin: -.5px 0 0 0;
+.newsbox .post_date {
+    font-style: italic;
 }
 
-.newsbox > p:last-child {
-	border-bottom: solid 1px #B6B4B4;
+.post_navigation {
+    padding: 0 40px 0 5px;
+    height: 20px;
 }
 
-.newsbox > p,
-.newsbox > h3, 
-.newsbox > pre 
-{
-	border-left: solid 1px #B6B4B4;
-	border-right: solid 1px #B6B4B4;
-	width: 90%;
-	margin: 0;
-	padding: 10px 10px 0 5px;
-
+.post_navigation #previous_page {
+    float: left;
 }
 
-.newsbox .footer {
-	width: 100%;
-	height: 25px;
-}
-.newsbox .footer .timestamp{
-	float: left;
-	font: 9pt arial;
-	margin: 2px 0 0 5px;
-	font-style: italic;
-}
-
-.newsbox .footer .actions{
-	float: right;
-	margin: 2px 5px 0 5px;
+.post_navigation #next_page {
+    float: right;
 }
 
 /*Widgets*/
