--- a/doc/styles/base.css
+++ b/doc/styles/base.css
@@ -14,10 +14,10 @@ img {
 
 #page {
 	position: relative;
-	width: 800px;
-	left: 50%;
+	width: 90%;
+	left: 5%;
 	height: 100%;
-	margin-left: -400px;
+	/*margin-left: -400px;*/
 	background-color: #FFF;
 	border-left: solid 1px black;
 	border-bottom: solid 1px black;
@@ -28,7 +28,7 @@ img {
 	position: relative;
 	border-left: solid 1px #000;
 	border-top: solid 1px #000;
-	margin: 0 24px 0 150px;
+	margin: 0 0 0 150px;
 	padding: 10px 10px 30px;
 	height: 100%;
 	min-height: 800px;
@@ -126,7 +126,7 @@ h2 {
 	padding: 0;
 }
 p {
-	font: 1em Arial;
+	font: 1.2em Arial;
 	color: #000;
 }
 
@@ -230,7 +230,20 @@ ul.dkarrow li {
 .newsbox h2.tab_title{
 	margin: 0;
 	padding: 0;
-	font-size: 11px;
+	font-size: 1.2em;
+}
+
+.newsbox h2.tab_title a:link, .newsbox h2.tab_title a:visited {
+    color: #000;
+    text-decoration: none;
+}
+
+.newsbox h2.tab_title a:hover {
+	color: #898787;
+}
+
+.newsbox h1 {
+    color: #624D2E
 }
 
 .newsbox h2.tab_title {
